fix: overflow in moible screens

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,3 @@
 .video-react .video-react-control-bar {
   display: none !important;
 }
-
-body {
-  overflow: hidden;
-}
